// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CursorPaging should correctly render cursor paging when there is only one page 1`] = `
<div
  className="PageButtons"
>
  <Button
    className="RewindButton"
    disabled={true}
    key="rewind"
    onClick={[MockFunction]}
  >
    <FirstPage />
    <ScreenReaderOnly>
      Return to First Page
    </ScreenReaderOnly>
  </Button>
  <Pager>
    <Pager.Previous
      disabled={true}
      onClick={[Function]}
    />
    <Pager.Next
      disabled={true}
      onClick={[Function]}
    />
  </Pager>
  <span
    className="PageDisplay"
  >
    Page:
     
    <strong
      className="Bold"
      data-id="pagination-current-page"
    >
      1
    </strong>
     
    / 
    1
  </span>
</div>
`;

exports[`CursorPaging should correctly render cursor paging when there is only one page 2`] = `
<Box
  alignItems="center"
  display="flex"
>
  <Button
    disabled={true}
    flat={true}
    key="rewind"
    onClick={[MockFunction]}
  >
    <FirstPage />
    <ScreenReaderOnly>
      Return to First Page
    </ScreenReaderOnly>
  </Button>
  <Pager>
    <Pager.Previous
      disabled={true}
      flat={true}
      onClick={[Function]}
    />
    <Pager.Next
      disabled={true}
      flat={true}
      onClick={[Function]}
    />
  </Pager>
  <Text
    as="span"
    fontSize="200"
    marginLeft="200"
  >
    Page: 
    <strong
      data-id="pagination-current-page"
    >
      1
    </strong>
     of 
    1
  </Text>
</Box>
`;
